# AsteroidsGame

./: CMakeLists.txt  README.md  main.cpp
elements/: asteroid.cpp  asteroid.h  entity.cpp  entity.h  images.cpp  images.h  spaceship.cpp  spaceship.h
elements/behavior/: automaticmovebehavior.cpp  automaticmovebehavior.h  manualmovebehavior.cpp  manualmovebehavior.h  movebehavior.cpp  movebehavior.h  nobehavior.cpp  nobehavior.h
game/: game.cpp  game.h  gamewindow.cpp  gamewindow.h
